--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alcohol for the Modern Drinker</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="banner">Free shipping on orders over $50</div>
+    <div class="banner" data-aos="zoom-in" data-aos-duration="1500">Free shipping on orders over $50</div>
 
     <header class="header">
         <div class="container">
             <nav class="header__nav">
-                <ul class="header__links">
+                <ul class="header__links" data-aos="zoom-out" data-aos-duration="1500">
                     <li><a href="#shop">Shop</a></li>
                     <li><a href="#membership">Membership</a></li>
                     <li><a href="#story">Our Story</a></li>
@@ -36,10 +37,10 @@
     <section class="hero" id="hero">
         <div class="hero__image" id="heroImage"></div>
         <div class="hero__content">
-            <h1>Alcohol for the Modern Drinker</h1>
-            <p>Light and fresh flavors made with real clean ingredients you can feel good about. Just pour, sip and
+            <h1 data-aos="fade-right" data-aos-duration="1500">Alcohol for the Modern Drinker</h1>
+            <p data-aos="fade-down-left" data-aos-duration="1500">Light and fresh flavors made with real clean ingredients you can feel good about. Just pour, sip and
                 enjoy.</p>
-            <button class="hero__btn">Shop ALL</button>
+            <button class="hero__btn" data-aos="zoom-in-down" data-aos-duration="1500">Shop ALL</button>
         </div>
         <div class="hero__bars">
             <span class="bar active"></span>
@@ -53,16 +54,16 @@
                 <ul class="article__list">
                     <li class="article__items">
                         <p>"What makes Haus so special is its incredible flavors."</p>
-                        <h2 class="article__title-one">FOOD&WINE</h2>
+                        <h2 class="article__title-one" data-aos="fade-up" data-aos-duration="1500">FOOD&WINE</h2>
                     </li>
                     <li class="article__items">
                         <p class="article__text-two">“For the wine or cocktail lover who’s tried it all and wants
                             something new and refreshing.”</p>
-                        <h2 class="article__title-two">The New York Times</h2>
+                        <h2 class="article__title-two"data-aos="fade-up" data-aos-duration="1500">The New York Times</h2>
                     </li>
                     <li class="article__items">
                         <p>“Cleaner, responsibly sourced, and lower in alcohol.”</p>
-                        <h2 class="article__title-three">bon appe'tit</h2>
+                        <h2 class="article__title-three"data-aos="fade-up" data-aos-duration="1500">bon appe'tit</h2>
                     </li>
                 </ul>
             </div>
@@ -72,20 +73,20 @@
     <main class="product">
         <div class="container">
             <div class="product__container" id="shop">
-                <h2>Made with natural ingredients, nothing fake</h2>
-                <p class="product__text"> Shop All Flavors</p>
+                <h2 data-aos="fade-down-right" data-aos-duration="1500">Made with natural ingredients, nothing fake</h2>
+                <p class="product__text" data-aos="fade-down" data-aos-duration="1000"> Shop All Flavors</p>
                 <ul class="product__list">
                     <li class="product__items">
-                        <img src="./img/product1.svg" alt="">
-                        <h3>The Sampler Kit</h3>
-                        <p>Try a variety of Haus flavors with our customizable four-bottle kit. Each bottle serves 2-3
+                        <img src="./img/product1.svg" alt="" data-aos="zoom-out" data-aos-duration="1500">
+                        <h3  data-aos="fade-down" data-aos-duration="1500">The Sampler Kit</h3>
+                        <p  data-aos="fade-down" data-aos-duration="1500">Try a variety of Haus flavors with our customizable four-bottle kit. Each bottle serves 2-3
                             drinks.</p>
                         <button class="button">Shop Now</button>
                     </li>
                     <li class="product__items">
                         <div>
-                            <img src="./img/product2.svg" alt="">
-                            <button  class="product__btn">
+                            <img src="./img/product2.svg" alt=""data-aos="zoom-out" data-aos-duration="1500">
+                            <button class="product__btn" data-aos="zoom-out-right" data-aos-duration="1500">
                                 <span class="span-mother">
                                     <span>B</span>
                                     <span>e</span>
@@ -112,15 +113,15 @@
                                 </span>
                             </button>
                         </div>
-                        <h3>Grapefruit Jalapeño</h3>
-                        <p>Light and refreshing, this aperitif is a bright blend of citrus with a subtle kick of fresh
+                        <h3 data-aos="fade-down" data-aos-duration="1500" >Grapefruit Jalapeño</h3>
+                        <p  data-aos="fade-down" data-aos-duration="1500">Light and refreshing, this aperitif is a bright blend of citrus with a subtle kick of fresh
                             jalapeño.</p>
                         <button class="button">Shop Now</button>
                     </li>
                     <li class="product__items">
                         <div>
-                            <img src="./img/product3.svg" alt="">
-                            <button class="product__btn">
+                            <img src="./img/product3.svg" alt=""data-aos="zoom-out" data-aos-duration="1500">
+                            <button class="product__btn" data-aos="zoom-out-right" data-aos-duration="1500">
                                 <span class="span-mother">
                                     <span>B</span>
                                     <span>e</span>
@@ -147,8 +148,8 @@
                                 </span>
                             </button>
                         </div>
-                        <h3>Citrus Flower</h3>
-                        <p>A fresh Californian take on the apéritif. Made with crisp lemon and subtle elderflower.</p>
+                        <h3  data-aos="fade-down" data-aos-duration="1500">Citrus Flower</h3>
+                        <p  data-aos="fade-down" data-aos-duration="1500">A fresh Californian take on the apéritif. Made with crisp lemon and subtle elderflower.</p>
                         <button class="button">Shop Now</button>
                     </li>
                 </ul>
@@ -159,10 +160,10 @@
     <section class="categories" id="story">
         <div class="container">
             <div class="categories__container">
-                <img src="./img/categories.svg" alt="">
+                <img src="./img/categories.svg" alt=""  data-aos="zoom-in-up" data-aos-duration="1500">
                 <div class="categories__box">
-                    <h3>An intro to apéritifs</h3>
-                    <p>Apéritifs are a category of spirits with complex flavors derived from fruits, herbs, and
+                    <h3  data-aos="fade-down" data-aos-duration="1500">An intro to apéritifs</h3>
+                    <p  data-aos="fade-right" data-aos-duration="1500">Apéritifs are a category of spirits with complex flavors derived from fruits, herbs, and
                         botanicals. Their lighter alcohol content (less than whiskey, more than wine) makes them perfect
                         to sip all evening.</p>
                 </div>
@@ -174,16 +175,16 @@
         <div class="container">
             <div class="card__container">
                 <div class="card__box">
-                    <h4>Easy to drink</h4>
-                    <p>The perfect anytime drink, sip Haus on its own or with simple mixers you probably already have
+                    <h4  data-aos="fade-down" data-aos-duration="500">Easy to drink</h4>
+                    <p  data-aos="fade-down" data-aos-duration="600">The perfect anytime drink, sip Haus on its own or with simple mixers you probably already have
                         like soda or tonic.</p>
-                    <h4>Natural ingredients. Nothing fake.</h4>
-                    <p>Artificial ingredients and refined sugars are a big culprit in hangovers. Feel good about what’s
+                    <h4  data-aos="fade-down" data-aos-duration="800">Natural ingredients. Nothing fake.</h4>
+                    <p  data-aos="fade-down" data-aos-duration="900">Artificial ingredients and refined sugars are a big culprit in hangovers. Feel good about what’s
                         in your glass that night — and the next day.</p>
-                    <h4>Delivered to your door</h4>
-                    <p>We blend, bottle, and ship our products straight from Sonoma, CA to your doorstep.</p>
+                    <h4  data-aos="fade-down" data-aos-duration="1100">Delivered to your door</h4>
+                    <p  data-aos="fade-down" data-aos-duration="1200">We blend, bottle, and ship our products straight from Sonoma, CA to your doorstep.</p>
                 </div>
-                <img src="./img/boka.svg" alt="">
+                <img src="./img/boka.svg" alt=""  data-aos="fade-right" data-aos-duration="1500">
             </div>
         </div>
     </section>
@@ -194,20 +195,20 @@
                 <div class="testimonials__box">
                     <ul class="testimonials__list">
                         <li class="testimonials__items">
-                            <h4>“Haus has found the solution I didn’t really know I was looking for!”</h4>
-                            <p class="testimonials__text">— Susan</p>
-                            <p class="testimonials__text-name">verified buyer</p>
+                            <h4  data-aos="fade-down-right" data-aos-duration="1200">“Haus has found the solution I didn’t really know I was looking for!”</h4>
+                            <p class="testimonials__text"  data-aos="fade-down" data-aos-duration="1500">— Susan</p>
+                            <p class="testimonials__text-name"  data-aos="fade-down-left" data-aos-duration="1500">verified buyer</p>
                         </li>
                         <li class="testimonials__items">
-                            <h4>“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with
+                            <h4  data-aos="fade-down-right" data-aos-duration="1200">“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with
                                 seltzer or tonic.”</h4>
-                            <p class="testimonials__text">— Fiona</p>
-                            <p class="testimonials__text-name">verified buyer</p>
+                            <p class="testimonials__text"  data-aos="fade-down" data-aos-duration="1500">— Fiona</p>
+                            <p class="testimonials__text-name"  data-aos="fade-down-left" data-aos-duration="1500">verified buyer</p>
                         </li>
                         <li class="testimonials__items">
-                            <h4>“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</h4>
-                            <p class="testimonials__text">— Esteban</p>
-                            <p class="testimonials__text-name">verified buyer</p>
+                            <h4  data-aos="fade-down-right" data-aos-duration="1200">“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</h4>
+                            <p class="testimonials__text"  data-aos="fade-down" data-aos-duration="1500">— Esteban</p>
+                            <p class="testimonials__text-name"  data-aos="fade-down-left" data-aos-duration="1500">verified buyer</p>
                         </li>
                     </ul>
                 </div>
@@ -217,13 +218,13 @@
     <section class="work" id="account">
         <div class="container">
             <div class="work__container">
-                <img src="./img/work.svg" alt="">
+                <img src="./img/work.svg" alt=""  data-aos="flip-left" data-aos-duration="1500">
                 <div class="work__box">
-                    <h2>We do things differently than most producers</h2>
-                    <p>Our flavors are derived from real fruits, herbs, and botanicals, not ingredients from a lab. We
+                    <h2  data-aos="fade-down-left" data-aos-duration="1500">We do things differently than most producers</h2>
+                    <p  data-aos="fade-down" data-aos-duration="1300">Our flavors are derived from real fruits, herbs, and botanicals, not ingredients from a lab. We
                         leave out the artificial ingredients and excess sugar, and tell you what’s inside. It’s a better
                         way to drink.</p>
-                    <div class="work__box">
+                    <div class="work__box"  data-aos="fade-right" data-aos-duration="1200">
                         <button class="learn-more">
                             <span class="circle" aria-hidden="true">
                                 <span class="icon arrow"></span>
@@ -239,7 +240,7 @@
         <div class="container">
             <div class="contact-inner" id="contact-root">
                 <!-- Левый бокс (плейлист) -->
-                <div class="box left" id="box-left">
+                <div class="box left" id="box-left"  data-aos="zoom-in-right" data-aos-duration="1500">
                     <div>
                         <div class="title">
                             <h3>Set the mood</h3>
@@ -258,7 +259,7 @@
                     </div>
                 </div>
 
-                <div class="box right" id="box-right">
+                <div class="box right" id="box-right"  data-aos="zoom-in" data-aos-duration="1500">
                     <div class="content">
                         <div>
                             <div style="font-size:20px;font-weight:600;margin-bottom:8px">Follow us,share us, drink us
@@ -318,10 +319,10 @@
         <div class="container">
             <div class="footer__container">
                 <div class="footer__box">
-                    <h4>Stay posted</h4>
-                    <p>Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes,
+                    <h4  data-aos="fade-down" data-aos-duration="1500">Stay posted</h4>
+                    <p  data-aos="fade-down-right" data-aos-duration="1500">Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes,
                         playlists, and more.</p>
-                    <form action="#">
+                    <form action="#"  data-aos="fade-right" data-aos-duration="1500">
                         <div class="input-wrapper">
                             <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <g data-name="Layer 2">
@@ -347,7 +348,7 @@
                 </div>
                 <div class="footer__boxes">
                     <ul class="footer__list">
-                        <li class="footer__items">
+                        <li class="footer__items" data-aos="zoom-out-right" data-aos-duration="1500">
                             <h6>Explore</h6>
                             <a href="">Home</a>
                             <a href="">Shop</a>
@@ -358,14 +359,14 @@
                             <a href="">Corporate Gifting</a>
                             <a href="">Gift Card</a>
                         </li>
-                        <li class="footer__items">
+                        <li class="footer__items"data-aos="zoom-out-right" data-aos-duration="1500">
                             <h6>Follow</h6>
                             <a href="">Instagram</a>
                             <a href="">Spotify</a>
                             <a href="">Twitter</a>
                             <a href="">Facebook</a>
                         </li>
-                        <li class="footer__items">
+                        <li class="footer__items"data-aos="zoom-out-right" data-aos-duration="1500">
                             <h6>Drop Us a Line</h6>
                             <a href="">hello@drink.haus</a>
                             <a href="">press@drink.haus</a>
@@ -379,11 +380,11 @@
             <footer class="lastest">
                 <div class="container">
                     <div class="lastest__container">
-                        <p>© Haus 2021</p>
-                        <a href="#">Contact Us</a>
-                        <a href="#">Return Policy</a>
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms & Conditions</a>
+                        <p  data-aos="fade-down" data-aos-duration="500">© Haus 2021</p>
+                        <a href="#"  data-aos="fade-down-right" data-aos-duration="800">Contact Us</a>
+                        <a href="#"  data-aos="fade-down-right" data-aos-duration="1000">Return Policy</a>
+                        <a href="#"  data-aos="fade-down-right" data-aos-duration="1200">Privacy Policy</a>
+                        <a href="#"  data-aos="fade-down-right" data-aos-duration="1500">Terms & Conditions</a>
                     </div>
                 </div>
             </footer>
@@ -391,7 +392,10 @@
     </footer>
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="./js/main.js"></script>
 </body>
 
